# GUI-Inheritance-Polymorphism

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/libfriimgui/: CMakeLists.txt  gui_builder.cpp  gui_builder.hpp  image.cpp  image.hpp  types.cpp  types.hpp  window.cpp  window.hpp
lib/libheap/: CMakeLists.txt  heap_monitor.cpp  heap_monitor.hpp
resources/: config.json
turtlepreter/: CMakeLists.txt  controllable.cpp  controllable.hpp  interpreter.cpp  interpreter.hpp  main.cpp  perk.cpp  perk.hpp  turtle.cpp  turtle.hpp  turtle_gui.cpp  turtle_gui.hpp
